// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> accepts a background colour prop 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    backgroundColour="#e665bf"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "backgroundColour": "#e665bf",
      "children": Array [
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "backgroundColour": "#e665bf",
        "children": Array [
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Loader /> accepts a dot colour prop 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    dotColour="#e665bf"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "backgroundColour": "none",
      "children": Array [
        <glamorous(span)
          dotColour="#e665bf"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e665bf"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e665bf"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e665bf"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e665bf"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e665bf"
        >
          ●
        </glamorous(span)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e665bf",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e665bf",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e665bf",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e665bf",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e665bf",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e665bf",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "backgroundColour": "none",
        "children": Array [
          <glamorous(span)
            dotColour="#e665bf"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e665bf"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e665bf"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e665bf"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e665bf"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e665bf"
          >
            ●
          </glamorous(span)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e665bf",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e665bf",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e665bf",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e665bf",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e665bf",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e665bf",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Loader /> has 6 dots 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "backgroundColour": "none",
      "children": Array [
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "backgroundColour": "none",
        "children": Array [
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Loader /> renders ok 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "backgroundColour": "none",
      "children": Array [
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
        <glamorous(span)
          dotColour="#e6eaeb"
        >
          ●
        </glamorous(span)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "●",
          "dotColour": "#e6eaeb",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "backgroundColour": "none",
        "children": Array [
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
          <glamorous(span)
            dotColour="#e6eaeb"
          >
            ●
          </glamorous(span)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "●",
            "dotColour": "#e6eaeb",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
